google search console

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Abhishek Mishra | Full Stack Developer & Problem Solver</title>
     <meta name="description"
         content="Abhishek Mishra is a Full Stack Developer specializing in web development, problem solving, and DSA. View projects, skills, and experience.">
+        <meta name="google-site-verification" content="lFpL_kgDTzMLfLvH82w4FqbPO_OXfDMBcmWS6qxwTow" />
     <meta name="keywords"
         content="Abhishek Mishra, Full Stack Developer, Web Developer, Problem Solver, Portfolio, Java, JavaScript, ReactJS, NodeJS,C++,JAVA">
     <meta name="author" content="Abhishek Mishra">
