--- a/index.html
+++ b/index.html
@@ -776,7 +776,15 @@
     <script src="js/script.js" defer></script>
     <script src="js/enhanced-projects.js" defer></script>
     <script src="js/cookie-consent.js" defer></script>
-   
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X9E029GM49"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-X9E029GM49');
+</script>
 </body>
 
 </html>
