google search console

--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -212,17 +212,8 @@
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
-    <script src="js/cookie-consent.js"></script>
-    <script>
-        // Simple script to handle theme toggle
-        document.querySelector('.theme-toggle').addEventListener('click', function() {
-            document.body.classList.toggle('dark-mode');
-            const themeIcon = this.querySelector('i');
-            themeIcon.classList.toggle('fa-moon');
-            themeIcon.classList.toggle('fa-sun');
-        });
-    </script>
+    <script src="js/script.js" defer></script>
+    <script src="js/cookie-consent.js" defer></script>
 </body>
 
 </html>
